--- a/HaierOven/Base.lproj/Main.storyboard
+++ b/HaierOven/Base.lproj/Main.storyboard
@@ -324,7 +324,7 @@
                     <navigationItem key="navigationItem" id="UYu-wW-zSu">
                         <nil key="title"/>
                         <view key="titleView" contentMode="scaleToFill" id="ftc-hP-qXv">
-                            <rect key="frame" x="130" y="6" width="60" height="33"/>
+                            <rect key="frame" x="130" y="5.5" width="60" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="登陆" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oNe-Mw-oan">
@@ -2041,7 +2041,7 @@
                             </button>
                         </barButtonItem>
                         <view key="titleView" contentMode="scaleToFill" id="Okl-2T-VQQ">
-                            <rect key="frame" x="120" y="6" width="80" height="33"/>
+                            <rect key="frame" x="120" y="5.5" width="80" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="购物清单" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cqi-7J-EAi">
@@ -2207,7 +2207,7 @@
                             </button>
                         </barButtonItem>
                         <view key="titleView" contentMode="scaleToFill" id="MrZ-a2-vpd">
-                            <rect key="frame" x="90" y="6" width="128" height="33"/>
+                            <rect key="frame" x="90" y="5.5" width="128" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="厨神名人堂" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JnB-pd-JVZ">
@@ -2310,7 +2310,7 @@
                     <navigationItem key="navigationItem" id="L3t-Ae-hgT">
                         <nil key="title"/>
                         <view key="titleView" contentMode="scaleToFill" id="EyQ-1s-GQM">
-                            <rect key="frame" x="96" y="6" width="128" height="33"/>
+                            <rect key="frame" x="96" y="5.5" width="128" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="厨神名人堂" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bJ3-VF-ZSz">
@@ -2334,6 +2334,48 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rOE-kK-Gnu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1597" y="417"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="KC7-uz-Kx1">
+            <objects>
+                <tableViewController storyboardIdentifier="My points controller" id="Ozc-sN-1bq" customClass="MyPointsController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="v3Y-5n-kx9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection id="FBv-Es-SEL">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="800" id="bKh-EI-LgO">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bKh-EI-LgO" id="QUQ-OW-AHG">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jifen.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="X1e-oV-VaV">
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="800"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="X1e-oV-VaV" secondAttribute="trailing" id="F4E-9d-SrC"/>
+                                                <constraint firstAttribute="bottom" secondItem="X1e-oV-VaV" secondAttribute="bottom" id="Z2I-ih-RKT"/>
+                                                <constraint firstItem="X1e-oV-VaV" firstAttribute="leading" secondItem="QUQ-OW-AHG" secondAttribute="leading" id="alR-BN-yDo"/>
+                                                <constraint firstItem="X1e-oV-VaV" firstAttribute="top" secondItem="QUQ-OW-AHG" secondAttribute="top" id="sym-vz-8dh"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="Ozc-sN-1bq" id="4CM-Wx-jeA"/>
+                            <outlet property="delegate" destination="Ozc-sN-1bq" id="gPR-2H-kI9"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Title" id="643-te-UJR"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="umZ-sI-JLl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-542" y="3777"/>
         </scene>
         <!--Device View Controller-->
         <scene sceneID="eLI-vl-b0h">
@@ -2522,7 +2564,7 @@
                             </button>
                         </barButtonItem>
                         <view key="titleView" contentMode="scaleToFill" id="cki-2l-gmw">
-                            <rect key="frame" x="96" y="6" width="128" height="33"/>
+                            <rect key="frame" x="96" y="5.5" width="128" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="通知" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pNV-Te-TwH">
@@ -5120,7 +5162,7 @@
                                     <constraint firstAttribute="height" constant="47" id="gKJ-ZN-rmH"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="123123" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BsA-Yr-3gz">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="我的烤箱" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BsA-Yr-3gz">
                                 <rect key="frame" x="24" y="338" width="272" height="47"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="47" id="icN-67-xoF"/>
@@ -5255,7 +5297,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Os6-jq-Qtw">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Os6-jq-Qtw">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="JQc-Hj-cwu">
@@ -5265,12 +5307,16 @@
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fakebg.png" translatesAutoresizingMaskIntoConstraints="NO" id="dyb-ya-LFU">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
                                         </imageView>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mydessertcount.png" translatesAutoresizingMaskIntoConstraints="NO" id="5xd-2T-l27">
+                                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mydessertcount.png" translatesAutoresizingMaskIntoConstraints="NO" id="5xd-2T-l27">
                                             <rect key="frame" x="243" y="36" width="77" height="25"/>
+                                            <gestureRecognizers/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="25" id="3Yx-8B-6RG"/>
                                                 <constraint firstAttribute="width" constant="77" id="a12-Zt-akt"/>
                                             </constraints>
+                                            <connections>
+                                                <outletCollection property="gestureRecognizers" destination="e0r-1j-uRr" appends="YES" id="MoR-yW-s3A"/>
+                                            </connections>
                                         </imageView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i5y-R2-FJB">
                                             <rect key="frame" x="277" y="139" width="30" height="30"/>
@@ -5515,9 +5561,12 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="editButton" destination="i5y-R2-FJB" id="8Jn-vQ-knc"/>
                         <outlet property="followBtn" destination="HcT-AF-i2T" id="cdM-EY-9tc"/>
                         <outlet property="genderImage" destination="4jc-wS-QEK" id="s3M-ai-crs"/>
                         <outlet property="myDessertCountLabel" destination="UzA-NC-OGR" id="MAG-hZ-PpZ"/>
+                        <outlet property="myPointsImageView" destination="5xd-2T-l27" id="C7F-rC-ud1"/>
+                        <outlet property="myPointsLabel" destination="b8H-bo-sSD" id="YuB-9x-ZVz"/>
                         <outlet property="personDescriptionLabel" destination="dy2-WY-H8z" id="3ex-mX-s22"/>
                         <outlet property="personalAvater" destination="l6m-IJ-Gin" id="9ip-iR-eC7"/>
                         <outlet property="personalNameLabel" destination="GWi-35-b87" id="hrM-UZ-d5e"/>
@@ -5528,6 +5577,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RJP-mY-cYr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="e0r-1j-uRr">
+                    <connections>
+                        <action selector="myPointsTapped:" destination="kp4-nH-hOl" id="HEu-9Q-4wr"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-981" y="3767"/>
         </scene>
@@ -6723,7 +6777,7 @@
                     <navigationItem key="navigationItem" id="gFO-W3-rv0">
                         <nil key="title"/>
                         <view key="titleView" contentMode="scaleToFill" id="3b8-Q8-dNm">
-                            <rect key="frame" x="90" y="6" width="140" height="33"/>
+                            <rect key="frame" x="90" y="5.5" width="140" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="信息补全" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hFl-HV-gta">
@@ -6874,6 +6928,7 @@
         <image name="guanji.png" width="26" height="26"/>
         <image name="huisousuo.png" width="17" height="17"/>
         <image name="jianjing.png" width="19" height="19"/>
+        <image name="jifen.jpg" width="712" height="1693"/>
         <image name="kaiji.png" width="26" height="26"/>
         <image name="kaoxiang.png" width="162" height="162"/>
         <image name="l2.png" width="720" height="1"/>
