--- a/HaierOven/MainViewNormalCell.xib
+++ b/HaierOven/MainViewNormalCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -19,14 +19,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainViewNormalCell" rowHeight="215" id="OUd-eZ-CUo" customClass="MainViewNormalCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="215"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainViewNormalCell" rowHeight="236" id="OUd-eZ-CUo" customClass="MainViewNormalCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="226"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OUd-eZ-CUo" id="Vm4-zh-08R">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cookbook_list_item_bg_default.png" translatesAutoresizingMaskIntoConstraints="NO" id="UZR-sU-xhL">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="211"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="210"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99,999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9VT-Kj-Qfw">
                         <rect key="frame" x="254" y="42" width="53" height="21"/>
@@ -50,24 +50,24 @@
                         <nil key="highlightedColor"/>
                         <color key="shadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UYG-7I-dNy">
+                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UYG-7I-dNy">
                         <rect key="frame" x="268" y="63" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="24" id="CDN-Gs-ewd"/>
                             <constraint firstAttribute="width" constant="24" id="YRf-nn-RQj"/>
                         </constraints>
-                        <state key="normal" image="shijian.png">
+                        <state key="normal" image="cookbook_list_time.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SGW-sZ-8v5">
+                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SGW-sZ-8v5">
                         <rect key="frame" x="268" y="22" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="24" id="Iil-H7-Si8"/>
                             <constraint firstAttribute="height" constant="24" id="tuf-PN-WDM"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="17"/>
-                        <state key="normal" title="赞">
+                        <state key="normal" image="cookbook_list_praise.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <state key="disabled" title="赞"/>
@@ -84,13 +84,13 @@
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v1a-PN-aSo">
-                        <rect key="frame" x="0.0" y="118" width="320" height="97"/>
+                        <rect key="frame" x="0.0" y="113" width="320" height="97"/>
                         <subviews>
                             <view alpha="0.85000002384185791" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OgX-NX-fC0" customClass="ContainerView">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="94"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="阿淇淇" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pFM-g6-WlQ">
-                                        <rect key="frame" x="8" y="71" width="57" height="15"/>
+                                        <rect key="frame" x="8" y="68" width="57" height="15"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="57" id="HiO-Rn-5xO"/>
                                             <constraint firstAttribute="width" constant="39" id="eQM-Pu-UXP"/>
@@ -107,11 +107,11 @@
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="pFM-g6-WlQ" secondAttribute="bottom" constant="8" id="NXi-DB-WAe"/>
+                                    <constraint firstAttribute="bottom" secondItem="pFM-g6-WlQ" secondAttribute="bottom" constant="14" id="NXi-DB-WAe"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="芒果芝士蛋糕" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qcm-dR-3B3">
-                                <rect key="frame" x="67" y="24" width="196" height="16"/>
+                                <rect key="frame" x="67" y="30" width="196" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="16" id="wnG-uL-7vY"/>
                                 </constraints>
@@ -120,7 +120,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="以150度烘烤约70分钟，出炉晒凉后脱模，冷藏4小时以上切开食用。" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9x-aZ-s7r">
-                                <rect key="frame" x="67" y="48" width="196" height="35"/>
+                                <rect key="frame" x="67" y="54" width="196" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="yaR-6B-Zau"/>
                                 </constraints>
@@ -129,7 +129,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3hh-yy-YOe">
-                                <rect key="frame" x="278" y="40" width="20" height="30"/>
+                                <rect key="frame" x="278" y="46" width="20" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="2Tj-cS-O0x"/>
                                     <constraint firstAttribute="height" constant="30" id="EAC-Kh-Ybt"/>
@@ -144,7 +144,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k1N-i6-vdZ">
-                                <rect key="frame" x="17" y="28" width="41" height="41"/>
+                                <rect key="frame" x="17" y="19" width="41" height="41"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="41" id="tWP-0W-ugZ"/>
                                     <constraint firstAttribute="width" constant="41" id="twX-LK-8Rv"/>
@@ -154,7 +154,7 @@
                                 </state>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="v.png" translatesAutoresizingMaskIntoConstraints="NO" id="whh-XC-lml">
-                                <rect key="frame" x="47" y="27" width="18" height="18"/>
+                                <rect key="frame" x="47" y="18" width="18" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="18" id="5Ld-3q-VMM"/>
                                     <constraint firstAttribute="height" constant="18" id="obf-F0-llo"/>
@@ -163,19 +163,19 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="t9x-aZ-s7r" firstAttribute="top" secondItem="Qcm-dR-3B3" secondAttribute="bottom" constant="8" id="4FA-ht-0pz"/>
-                            <constraint firstItem="k1N-i6-vdZ" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="28" id="8p6-ae-RMG"/>
+                            <constraint firstItem="k1N-i6-vdZ" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="19" id="8p6-ae-RMG"/>
                             <constraint firstItem="k1N-i6-vdZ" firstAttribute="leading" secondItem="v1a-PN-aSo" secondAttribute="leading" constant="17" id="9lK-HQ-PGR"/>
-                            <constraint firstItem="3hh-yy-YOe" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="40" id="Ccs-9E-kvd"/>
+                            <constraint firstItem="3hh-yy-YOe" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="46" id="Ccs-9E-kvd"/>
                             <constraint firstItem="3hh-yy-YOe" firstAttribute="leading" secondItem="t9x-aZ-s7r" secondAttribute="trailing" constant="15" id="Jl2-gB-4fV"/>
                             <constraint firstItem="pFM-g6-WlQ" firstAttribute="centerX" secondItem="k1N-i6-vdZ" secondAttribute="centerX" constant="-1" id="Khi-qk-QQB"/>
                             <constraint firstAttribute="height" constant="97" id="NVT-r5-QWE"/>
-                            <constraint firstItem="Qcm-dR-3B3" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="24" id="P9S-uN-rPb"/>
+                            <constraint firstItem="Qcm-dR-3B3" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="30" id="P9S-uN-rPb"/>
                             <constraint firstItem="OgX-NX-fC0" firstAttribute="leading" secondItem="v1a-PN-aSo" secondAttribute="leading" id="TBp-Mr-OwW"/>
                             <constraint firstItem="whh-XC-lml" firstAttribute="leading" secondItem="v1a-PN-aSo" secondAttribute="leading" constant="47" id="Td4-uI-JE1"/>
-                            <constraint firstAttribute="bottom" secondItem="OgX-NX-fC0" secondAttribute="bottom" constant="3" id="Tgn-Hf-w3y"/>
+                            <constraint firstAttribute="bottom" secondItem="OgX-NX-fC0" secondAttribute="bottom" id="Tgn-Hf-w3y"/>
                             <constraint firstItem="t9x-aZ-s7r" firstAttribute="leading" secondItem="k1N-i6-vdZ" secondAttribute="trailing" constant="9" id="WCR-OP-3bw"/>
                             <constraint firstAttribute="trailing" secondItem="OgX-NX-fC0" secondAttribute="trailing" id="dDC-w5-qzw"/>
-                            <constraint firstItem="whh-XC-lml" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="27" id="fx4-bw-YPz"/>
+                            <constraint firstItem="whh-XC-lml" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="18" id="fx4-bw-YPz"/>
                             <constraint firstAttribute="trailing" secondItem="3hh-yy-YOe" secondAttribute="trailing" constant="22" id="gGu-TR-bes"/>
                             <constraint firstItem="3hh-yy-YOe" firstAttribute="leading" secondItem="Qcm-dR-3B3" secondAttribute="trailing" constant="15" id="mdM-HC-oAY"/>
                             <constraint firstItem="OgX-NX-fC0" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" id="uV4-3H-Oqm"/>
@@ -195,8 +195,8 @@
                     <constraint firstItem="VTs-LX-iVh" firstAttribute="leading" secondItem="Vm4-zh-08R" secondAttribute="leadingMargin" constant="-8" id="WNc-29-ncS"/>
                     <constraint firstAttribute="trailingMargin" secondItem="oRg-8d-2Ux" secondAttribute="trailing" constant="-7" id="Ww5-HO-dXD"/>
                     <constraint firstAttribute="trailing" secondItem="UZR-sU-xhL" secondAttribute="trailing" id="Yxg-Kp-aFb"/>
-                    <constraint firstAttribute="bottom" secondItem="v1a-PN-aSo" secondAttribute="bottom" id="Zfb-UN-IwP"/>
-                    <constraint firstAttribute="bottom" secondItem="UZR-sU-xhL" secondAttribute="bottom" constant="4" id="aSY-vi-DjB"/>
+                    <constraint firstAttribute="bottom" secondItem="v1a-PN-aSo" secondAttribute="bottom" constant="15" id="Zfb-UN-IwP"/>
+                    <constraint firstAttribute="bottom" secondItem="UZR-sU-xhL" secondAttribute="bottom" constant="15" id="aSY-vi-DjB"/>
                     <constraint firstAttribute="trailingMargin" secondItem="UYG-7I-dNy" secondAttribute="trailing" constant="20" id="kZx-KH-C3U"/>
                     <constraint firstItem="SGW-sZ-8v5" firstAttribute="top" secondItem="Vm4-zh-08R" secondAttribute="top" constant="22" id="mh4-fN-c2M"/>
                     <constraint firstItem="UZR-sU-xhL" firstAttribute="top" secondItem="Vm4-zh-08R" secondAttribute="top" id="trq-Ac-YgY"/>
@@ -217,16 +217,17 @@
                 <outlet property="timeLabel" destination="oRg-8d-2Ux" id="71e-7r-beu"/>
                 <outlet property="vedioBtn" destination="3hh-yy-YOe" id="kdu-o0-iSn"/>
             </connections>
-            <point key="canvasLocation" x="266" y="274.5"/>
+            <point key="canvasLocation" x="266" y="269"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="bofang.png" width="41" height="41"/>
         <image name="cookbook_list_item_bg_default.png" width="274" height="206"/>
+        <image name="cookbook_list_praise.png" width="23" height="22"/>
+        <image name="cookbook_list_time.png" width="23" height="23"/>
         <image name="default_avatar.png" width="127" height="127"/>
         <image name="gfcp.png" width="76" height="27"/>
         <image name="go_forward_white.png" width="31" height="52"/>
-        <image name="shijian.png" width="24" height="24"/>
         <image name="v.png" width="14" height="14"/>
     </resources>
 </document>
