--- a/HaierOven/NormalTableViewCell.xib
+++ b/HaierOven/NormalTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -27,7 +27,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="五个字的哦" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cbt-HA-mRZ">
-                        <rect key="frame" x="75" y="19" width="70" height="17"/>
+                        <rect key="frame" x="75" y="19.5" width="70" height="16.5"/>
                         <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="14"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -47,7 +47,7 @@
                         </constraints>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ukt-4u-fQr">
-                        <rect key="frame" x="209" y="17" width="35" height="21"/>
+                        <rect key="frame" x="245" y="17" width="35" height="21"/>
                         <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="uCi-ea-imI"/>
@@ -59,13 +59,13 @@
                     </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Ukt-4u-fQr" firstAttribute="leading" secondItem="cbt-HA-mRZ" secondAttribute="trailing" constant="100" id="1dl-Q3-aOh"/>
                     <constraint firstAttribute="trailing" secondItem="ZZm-Zk-92b" secondAttribute="trailing" id="BTf-SM-OTb"/>
                     <constraint firstAttribute="centerY" secondItem="7LR-nu-BIt" secondAttribute="centerY" id="DYC-2t-C9w"/>
                     <constraint firstAttribute="bottom" secondItem="EMc-mO-Esn" secondAttribute="bottom" id="Mqs-aq-6Wf"/>
                     <constraint firstAttribute="centerY" secondItem="cbt-HA-mRZ" secondAttribute="centerY" id="TUF-PF-iaf"/>
                     <constraint firstItem="EMc-mO-Esn" firstAttribute="top" secondItem="yWf-1h-4WQ" secondAttribute="top" id="d6C-fT-Ye3"/>
                     <constraint firstItem="EMc-mO-Esn" firstAttribute="leading" secondItem="yWf-1h-4WQ" secondAttribute="leading" id="fZa-dh-1a6"/>
-                    <constraint firstAttribute="trailing" secondItem="Ukt-4u-fQr" secondAttribute="trailing" constant="76" id="iwf-cd-2pz"/>
                     <constraint firstAttribute="bottom" secondItem="ZZm-Zk-92b" secondAttribute="bottom" id="k6j-nD-5Fr"/>
                     <constraint firstItem="cbt-HA-mRZ" firstAttribute="leading" secondItem="7LR-nu-BIt" secondAttribute="trailing" constant="21" id="kLq-iV-U44"/>
                     <constraint firstItem="cbt-HA-mRZ" firstAttribute="centerY" secondItem="Ukt-4u-fQr" secondAttribute="centerY" id="mfw-zz-KX8"/>
