--- a/HaierOven/SearchView.xib
+++ b/HaierOven/SearchView.xib
@@ -56,13 +56,14 @@
                         <action selector="Cancel:" destination="TY8-99-rAZ" eventType="touchUpInside" id="hzP-Fa-M0H"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EUn-se-D6N">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EUn-se-D6N">
                     <rect key="frame" x="274" y="3" width="46" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="4au-o7-dwH"/>
                         <constraint firstAttribute="width" constant="46" id="Ohs-5C-O5z"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="17"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <state key="normal" title="取消">
                         <color key="titleColor" red="0.95294117649999999" green="0.64705882349999999" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" red="0.95294117649999999" green="0.64705882349999999" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
